--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -52,7 +52,7 @@ const menuitems = [
                 {!item.children && (
                   <li>
                     <a
-                      href={import.meta.env.BASE_URL + "/" +  item.path.slice(1)}
+                      href={import.meta.env.BASE_URL + item.path}
                       class="flex lg:px-3 py-2 items-center text-gray-600 hover:text-gray-900">
                       <span> {item.title}</span>
                     </a>
