--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -29,7 +29,7 @@ const menuitems = [
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
         <a href="/" class="text-lg flex items-center">
-          <img src="./images/ma-logo-bgreen.png" alt="MountainAsh Logo" class="h-8 w-auto mr-3" />
+          <img src={import.meta.env.BASE_URL + "/images/ma-logo-bgreen.png"} alt="MountainAsh Logo" class="h-8 w-auto mr-3" />
           <span class="font-bold text-slate-800">Mountain</span><span class="text-slate-500">Ash</span>
         </a>
         <div class="block lg:hidden">
@@ -63,13 +63,13 @@ const menuitems = [
           }
         </ul>
         <div class="lg:hidden flex items-center mt-3 gap-4">
-          <Link href={import.meta.env.BASE_URL + "contact"} style="muted" block size="md">Contact Us</Link>
+          <Link href={import.meta.env.BASE_URL + "/contact"} style="muted" block size="md">Contact Us</Link>
         </div>
       </MenuItems>
     </Astronav>
     <div>
       <div class="hidden lg:flex items-center gap-4">
-        <Link href={import.meta.env.BASE_URL + "contact"} size="md">Contact Us</Link>
+        <Link href={import.meta.env.BASE_URL + "/contact"} size="md">Contact Us</Link>
       </div>
     </div>
   </header>
