--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -16,7 +16,7 @@ const productOptions = [
     ],
     button: {
       text: "Contact Us",
-      link: "/contact",
+      link: {import.meta.env.BASE_URL + "/contact"},
     },
   },
   {
@@ -31,7 +31,7 @@ const productOptions = [
     ],
     button: {
       text: "Get Started",
-      link: "/contact",
+      link: {import.meta.env.BASE_URL + "/contact"},
     },
   },
   {
@@ -46,7 +46,7 @@ const productOptions = [
     ],
     button: {
       text: "Learn More",
-      link: "/contact",
+      link: {import.meta.env.BASE_URL + "/contact"},
     },
   },
 ];
