Remove unused workflow triggers, update site base URL, and refine content in components. Updated product links in pricing page. Remove unused workflow triggers, update site base URL, and refine content in components. Updated product links in pricing page.

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -18,10 +18,11 @@ import { Icon } from "astro-icon/components";
   </div>
   <div>
     <h1 class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Revolutionizing CCR Data Management
+        Comprehensive Credit Reporting.<br>
+        Done Right.
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      MountainAsh provides an innovative, portable, and modular end-to-end solution for Comprehensive Credit Reporting (CCR) data in the financial services industry.
+      MountainAsh provides a suite of flexible Comprehensive Credit Reporting (CCR) data solutions for the financial services industry.
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
