--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -7,12 +7,13 @@ import { Icon } from "astro-icon/components";
   <h2 class="text-center text-slate-500">Works with your technologies</h2>
   <div class="flex gap-8 md:gap-20 items-center justify-center mt-10 flex-wrap">
 
-    <Icon class="size-8 md:size-12" name="simple-icons:react" />
-    <Icon class="size-8 md:size-12" name="simple-icons:svelte" />
-    <Icon class="size-8 md:size-12" name="simple-icons:astro" />
-    <Icon class="size-8 md:size-16" name="simple-icons:tailwindcss" />
-    <Icon class="size-8 md:size-16" name="simple-icons:alpinedotjs" />
-    <Icon class="size-8 md:size-12" name="simple-icons:vercel" />
+    <Icon class="size-8 md:size-12" name="simple-icons:python" />
+    <Icon class="size-8 md:size-12" name="simple-icons:posit" />
+    <Icon class="size-8 md:size-12" name="simple-icons:databricks" />
+    <Icon class="size-8 md:size-12" name="simple-icons:snowflake" />
+    <Icon class="size-8 md:size-16" name="simple-icons:amazonwebservices" />
+    <Icon class="size-8 md:size-16" name="simple-icons:microsoftazure" />
+    <Icon class="size-8 md:size-12" name="simple-icons:googlecloud" />
 
   </div>
 </div>
