--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -34,7 +34,8 @@ const teamMembers = [
 
     <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
       <h2 class="font-bold text-3xl text-gray-800">
-        Revolutionizing Comprehensive Credit Reporting
+        Comprehensive Credit Reporting.<br>
+        Done. Forever.
       </h2>
       <p class="text-lg leading-relaxed text-slate-500">
         At MountainAsh, we're dedicated to providing innovative, portable, and modular solutions for Comprehensive Credit Reporting (CCR) in the financial services industry. Our team brings diverse expertise to tackle the complex challenges of CCR data management.
