Add new icons and rearrange existing ones in logos component
Added icons for pandas, polars, duckdb, postgresql. Rearranged icon order.

--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -8,12 +8,16 @@ import { Icon } from "astro-icon/components";
   <div class="flex gap-8 md:gap-20 items-center justify-center mt-10 flex-wrap">
 
     <Icon class="size-8 md:size-12" name="simple-icons:python" />
-    <Icon class="size-8 md:size-12" name="simple-icons:posit" />
+    <Icon class="size-8 md:size-12" name="simple-icons:pandas" />
+    <Icon class="size-8 md:size-12" name="simple-icons:polars" />
+    <Icon class="size-8 md:size-12" name="simple-icons:duckdb" />
+    <Icon class="size-8 md:size-12" name="simple-icons:postgresql" />    
+  </div>
+  <div class="flex gap-8 md:gap-20 items-center justify-center mt-10 flex-wrap">
     <Icon class="size-8 md:size-12" name="simple-icons:databricks" />
     <Icon class="size-8 md:size-12" name="simple-icons:snowflake" />
     <Icon class="size-8 md:size-16" name="simple-icons:amazonwebservices" />
     <Icon class="size-8 md:size-16" name="simple-icons:microsoftazure" />
     <Icon class="size-8 md:size-12" name="simple-icons:googlecloud" />
-
   </div>
 </div>
